# flux-data-monitoring

./: Makefile.am  configure.ac
src/: Makefile.am
src/cmd/: flux-account-create-elastic-logs.py
src/test/docker/: docker-run-checks.sh
src/test/docker/bookworm/: Dockerfile
t/: Makefile.am  t1001-elastic-basic.t  t1002-elastic-job-states.t  t1044-elastic.t
